--- a/README.adoc
+++ b/README.adoc
@@ -33,9 +33,9 @@ nohup java -jar heanbian-jrebel-license-1.0-SNAPSHOT.jar -p 7881 &
 
 JRebel & JetBrains License Server
 
-JetBrains 激活地址是： https://jrebel.heanbian.com[https://jrebel.heanbian.com]
+JetBrains 激活地址是： http://localhost:7881[http://localhost:7881]
 
-JRebel 激活地址是： `https://jrebel.heanbian.com/2f672307-13e8-415c-b439-49b03ef3f4fb`
+JRebel 激活地址是： `http://localhost:7881/2f672307-13e8-415c-b439-49b03ef3f4fb`
 
 == 源自
 
